# hello

./: .gitattributes  .gitignore  LICENSE  README.md  mergemaster
D3/graph-gallery/: bar-basic.html  hist-interactive.html
D3/hellochart/: browseruse.csv  pie1.html
GDX/: README.md
GDX/gdx-setup/: .gitignore  README.md
GDX/gltf-demo/: build.gradle
GDX/libgdx.info-Box2D-basic-master/: README.md  build.gradle
GDX/libgdx.info-Box2d-importing-models-master/: build.gradle
GDX/tiled01/: README.md  build.gradle
GLFW/: .gitignore  README.md
GLFW/defered/: 8.2.deferred_light_box.fs  Makefile  main.cpp
GLFW/test1/: Makefile  main.cpp
acsl/: .gitignore
acsl-pydev/: .gitignore
acsl-pydev/acsl/: .project  .pydevproject
acsl-pydev/dmoj_c1/: .project
acsl-pydev/hackerrank/: .project
acsl-pydev/hacking/: .project  anserv.py
acsl-pydev/java/: .gitignore
acsl-pydev/numpy/: np1.py
acsl-pydev/usaco/: .gitignore  .project
acsl/lect01/: alice.factorial.py  fibonacci.py  guess.py  try.var_scope.py
android/MultiType-FilePicker-2.2.7/: README.md  build.gradle
android/SharedPrefs/: README.md  build.gradle
android/glide-gallery/: README.md  settings.gradle
android/java-photoslibrary-main/: local.properties
apache/: .project  README.md  install.bat  uninstall.bat
audio.ml/: .gitignore  README.md  audio_prep.py  extract_data.py  mlp.py
bootstrap/: ex01.html  ex02.html
bootstrap/quick-quiz/: index.html  quiz.js  unicorns.json
challenge/: .gitignore
challenge/leet/: .project
challenge/leet.gcc/q022/: CMakeLists.txt  main.cpp
challenge/leet.gcc/q102/: CMakeLists.txt  main.cpp
challenge/leet.gcc/q131/: CMakeLists.txt  main.cpp  q131.cpp
challenge/leet.java/: .classpath  .project
challenge/leet.sqlite/: mediumdb
challenge/leet.ts/: mocha.config.js  package-lock.json  package.json  tsconfig.json
csharp/: .gitignore
csharp/MyExplore3/: MyExplore3.sln  README.md
doc-java-js/pdf.js/: helloworld.html
docing/: .merge-master.swp
docker/: README.md
docker/nginx/: README.md
docker/prosody/: README.md  mod_vcard_muc.lua
docker/wordpress/: docker-compose.yml
docs/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_downloads/: ascending_sr.py  duplicates_int.py  duplicates_sr.py  inter.h  lec02-sample-3.circ  minheap.py  passport_int.py  q020.py  q026.py  q078.py  q083.py  q088.py  q141.h  q1551.py  q168.py  q172.py  q204.py  q278.py  q303.py  q374.py  q658.py  q784.h  sampleprog.py  treehelper2.py  wdtpd-p3.py
docs/_sources/: index.rst.txt  index.txt
docs/acadynamo/: index.html
docs/acsl/: index.html
docs/amc/: 2021.html  aime-2021.html  index.html  p01-stars-bars.html  p02-mass-point.html
docs/cemc/: hypatia-galois-2021.html
docs/jsdoc/: f1.html
docs/lectures/: index.html
docs/misc/: index.html  miscellaneous.html  xmpp.html
docs/notes/: leetcode.html
docs/usaco/: index.html
docsphinx/: .gitignore  Makefile  conf.py  index.rst
docsphinx/acadynamo/: index.rst
docsphinx/acsl/: index.rst
docsphinx/amc/: index.rst  p01-stars-bars.rst  p02-mass-point.rst
docsphinx/cemc/: hypatia-galois-2021.rst
docsphinx/lectures/: index.rst
docsphinx/misc/: index.rst  miscellaneous.rst  xmpp.rst
docsphinx/notes/: leetcode.rst
docsphinx/usaco/: index.rst
eclipse-ws/.metadata/: version.ini
ecs-js-example-master/: package-lock.json  package.json
ecs-js-example-master/src/: game.js  input.js
gcc/: .gitignore  tips-qt.md
gcc/01/: hello  hello.c
gcc/build-helloheap-Desktop-Debug/: s2.in
gcc/helloheap/: CMakeLists.txt  main.cpp
godot/Gridmaps Demo/: Grid1.tscn  GridMap_Demo.tscn  MeshLibrary.tres  MeshLibrary_1.tscn  (+2 more)
google-test/: CMakeLists.txt  README.md
google-test/src/: math_utils.h
google-test/tests/: test_math_utils.cpp
gradle/: README.md
hello-sphinx/: README.md
hello.csharp/: hello.csharp.sln
hellomv/: README.MD
hellopy/: .gitignore  .project  hello.py  wakeonlan.py
jitsi/: .gitignore  README.md
jwi/: .project
learning-from-data/: README.md  ex1.4.py  quick-start.md
lession2/: L2.blend  L2.blend1  house1.g3dj  house1.mtl  lession2.sln
local-cdn/: .gitignore
mocha/: README.md  karma.config.js  package-lock.json  package.json  webpack-test.config.js
npm/: .gitignore  README.md  package-lock.json  package.json
proto2/: README.md  build.gradle
prototypes/: build.gradle
qt_6_10/: .gitignore
qt_6_10/jni_desktop/qtquiclient/: CMakeLists.txt  Main.qml  main.cpp  semantier.cpp  semantier.h  semantier_qml.js
res/: house1-found alarm items.txt  lesson2.fbx
rttr_json_sax/: CMakeLists.txt  LICENSE.txt  README.md
rttr_json_sax/src/: CMakeLists.txt  player.hpp  rttr_sax_handler.hpp
rttr_json_sax/tests/: CMakeLists.txt  node.cpp  node.h  test_01_rttr_tutor.cpp  test_02_deserializer.cpp  test_deserializer.cpp
rttr_json_sax/tests/io/odysz/: anson.hpp  jprotocol.hpp  rttr.hpp
slint/: start.slint
slint/surrealism/stree/: CMakeLists.txt  README.md
slint/surrealism/stree/src/: file-explorer.h  main.cpp  webview-ext.h
slint/surrealism/stree/ui/: app-window.slint  custom-table.slint  file-explorer.slint  file-tree.slint  table_view_page.slint  web-window-try.slint
sphinxcontrib.images/: REAMDE.md  images.py  lightbox2.py
synthclipse/: .gitignore
tensorflow/: pix2pix.ipynb
tika/: .project  pom.xml
tiled/: README.md
tomct-embed/: .project  pom.xml
torch/: .gitignore  README.md
tree-sitter/: .gitignore  CMakeLists.txt  LICENSE  README.md  node-types-classfields.json  node-types.json
tree-sitter/record-refactor/: README.md  gen-registry-refact1.py  refactor by ody query_strings.py  upload gen-registry.py  upload query_strings.py
tree-sitter/src/: CMakeLists.txt  anson.json  gen-registry-2.py  gen-registry-3.py  gen-registry-4.py  gen-registry-5.py  gen-registry-6.py  gen-registry-7.py  gen-registry-8.py  gen-registry.py
tree-sitter/src/dev/: ping.cpp
tree-sitter/src/io/odysz/: anson.h  common.h  jprotocol.h  json.h  json.hpp  serializer.h
tryjs/: promise-wrap-callback.html  promise-wrap-then.html  promise.js
(+1827 files in other folders)
